--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -1,107 +1,112 @@
+<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Dashboardbackground"
-    tools:context=".User.UserDashboard"
+    android:background="#E6F0FA"
     android:paddingBottom="30dp"
     android:fitsSystemWindows="true"
-    >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".User.UserDashboard"
-    android:orientation="vertical"
-    android:background="@color/Dashboardbackground">
-    <RelativeLayout
+    tools:context=".User.UserDashboard">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp">
+        android:background="#E6F0FA"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-        <ImageView
-            android:id="@+id/menu_icon_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/menu_icon"
-            app:tint="@color/black"
-            android:clickable="true"
-            android:focusable="true" />
-
-        <Button
-            android:id="@+id/sign_out_button"
-            android:layout_width="wrap_content"
+        <!-- Header Section -->
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:text="Sign Out"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/SearchBar"
-            android:fontFamily="@font/roboto" />
+            android:padding="12dp"
+            android:background="@drawable/header_background">
 
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/menu_icon_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="8dp"
+                android:src="@drawable/menu_icon"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:focusable="true"
+                app:tint="#003554" />
 
+            <Button
+                android:id="@+id/sign_out_button"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/button_background"
+                android:fontFamily="@font/roboto"
+                android:textStyle="bold"
+                android:paddingHorizontal="16dp"
+                android:text="Sign Out"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp" />
+        </RelativeLayout>
+
+        <!-- App Name -->
         <TextView
             android:id="@+id/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/anton"
-            android:textColor="@color/white"
             android:text="Don't Lose Track"
-            android:textSize="26sp" />
+            android:textColor="#003554"
+            android:textSize="28sp"
+            android:textStyle="bold" />
 
-
-    </RelativeLayout>
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
+        <!-- Calorie Progress Section -->
+        <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="16dp">
 
             <LinearLayout
-                android:layout_width="360dp"
-                android:layout_height="280dp"
-                android:layout_margin="0dp"
-
-                android:padding="0dp"
-                android:background="@color/SearchBar"
-                android:paddingRight="5dp"
-                android:orientation="vertical">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/card_background"
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
+                    android:layout_width="360dp"
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/calories_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_marginStart="12dp"
+                        android:layout_marginTop="12dp"
                         android:fontFamily="@font/anton"
                         android:text="Calories"
-                        android:textColor="@color/light_white"
-                        android:textSize="30sp"
+                        android:textColor="#003554"
+                        android:textSize="26sp"
+                        android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
-
 
                     <ProgressBar
                         android:id="@+id/progress_calories"
                         style="@style/CircularDeterminateProgressBar"
                         android:layout_width="200dp"
                         android:layout_height="200dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
+                        android:progressTint="#00A8E8"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/calories_text"
                         tools:progress="50" />
 
@@ -109,148 +114,160 @@
                         android:id="@+id/calories_remaining_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:fontFamily="sans-serif-black"
+                        android:fontFamily="@font/roboto"
+                        android:textStyle="bold"
                         android:text="0"
-                        android:textColor="@color/light_white"
-                        android:textSize="15sp"
+                        android:textColor="#003554"
+                        android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="@id/progress_calories"
-                        app:layout_constraintLeft_toLeftOf="@id/progress_calories"
-                        app:layout_constraintRight_toRightOf="@id/progress_calories"
+                        app:layout_constraintEnd_toEndOf="@id/progress_calories"
+                        app:layout_constraintStart_toStartOf="@id/progress_calories"
                         app:layout_constraintTop_toTopOf="@id/progress_calories" />
 
                     <TextView
                         android:id="@+id/remaining_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:fontFamily="sans-serif-black"
+                        android:layout_marginTop="8dp"
+                        android:fontFamily="@font/roboto"
+                        android:textStyle="bold"
                         android:text="Remaining"
-                        android:textColor="@color/light_white"
-                        android:textSize="15sp"
-                        app:layout_constraintLeft_toLeftOf="@id/progress_calories"
-                        app:layout_constraintRight_toRightOf="@id/progress_calories"
+                        android:textColor="#003554"
+                        android:textSize="16sp"
+                        app:layout_constraintEnd_toEndOf="@id/progress_calories"
+                        app:layout_constraintStart_toStartOf="@id/progress_calories"
                         app:layout_constraintTop_toBottomOf="@id/calories_remaining_text" />
 
                     <TextView
                         android:id="@+id/goal_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:fontFamily="sans-serif-black"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
+                        android:fontFamily="@font/roboto"
+                        android:textStyle="bold"
                         android:text="Base Calorie Goal"
-                        android:textColor="@color/light_white"
-                        android:textSize="15sp"
-                        app:layout_constraintLeft_toRightOf="@id/progress_calories"
+                        android:textColor="#003554"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toEndOf="@id/progress_calories"
                         app:layout_constraintTop_toBottomOf="@id/calories_text" />
 
                     <TextView
                         android:id="@+id/goal_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:fontFamily="sans-serif-black"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="8dp"
+                        android:fontFamily="@font/roboto"
+                        android:textStyle="bold"
                         android:text="0"
-                        android:textColor="@color/light_white"
-                        android:textSize="15sp"
-                        app:layout_constraintLeft_toRightOf="@id/progress_calories"
+                        android:textColor="#006D77"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toEndOf="@id/progress_calories"
                         app:layout_constraintTop_toBottomOf="@id/goal_text" />
 
                     <TextView
                         android:id="@+id/consumed_calories_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:fontFamily="sans-serif-black"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="8dp"
+                        android:fontFamily="@font/roboto"
+                        android:textStyle="bold"
                         android:text="Consumed Calories"
-
-                        android:textColor="@color/light_white"
-                        android:textSize="15sp"
-                        app:layout_constraintLeft_toRightOf="@id/progress_calories"
+                        android:textColor="#003554"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toEndOf="@id/progress_calories"
                         app:layout_constraintTop_toBottomOf="@id/goal_value" />
 
                     <TextView
                         android:id="@+id/consumed_calories_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:fontFamily="sans-serif-black"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="8dp"
+                        android:fontFamily="@font/roboto"
+                        android:textStyle="bold"
                         android:text="0"
-                        android:textColor="@color/light_white"
-                        android:textSize="15sp"
-                        app:layout_constraintLeft_toRightOf="@id/progress_calories"
+                        android:textColor="#006D77"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toEndOf="@id/progress_calories"
                         app:layout_constraintTop_toBottomOf="@id/consumed_calories_text" />
-
-
 
                     <LinearLayout
                         android:id="@+id/burned_calories_section"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="8dp"
+                        android:background="?attr/selectableItemBackground"
                         android:clickable="true"
                         android:focusable="true"
-                        app:layout_constraintLeft_toRightOf="@id/progress_calories"
-                        app:layout_constraintTop_toBottomOf="@id/consumed_calories_value"
-                        android:background="?attr/selectableItemBackground">
+                        android:orientation="vertical"
+                        app:layout_constraintStart_toEndOf="@id/progress_calories"
+                        app:layout_constraintTop_toBottomOf="@id/consumed_calories_value">
+
                         <TextView
                             android:id="@+id/burned_calories_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="10dp"
-                            android:fontFamily="sans-serif-black"
+                            android:fontFamily="@font/roboto"
+                            android:textStyle="bold"
                             android:text="Burned Calories"
-                            android:textColor="@color/light_white"
-                            android:textSize="15sp"
-                             />
+                            android:textColor="#003554"
+                            android:textSize="16sp" />
 
                         <TextView
                             android:id="@+id/burned_calories_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="10dp"
-                            android:fontFamily="sans-serif-black"
+                            android:layout_marginTop="8dp"
+                            android:fontFamily="@font/roboto"
+                            android:textStyle="bold"
                             android:text="0 kcal"
-                            android:textColor="@color/light_white"
-                            android:textSize="15sp"
-                             />
+                            android:textColor="#006D77"
+                            android:textSize="16sp" />
                     </LinearLayout>
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
             </LinearLayout>
+        </HorizontalScrollView>
 
+        <!-- Action Buttons -->
+        <Button
+            android:id="@+id/AddMacro"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/button_background"
+            android:fontFamily="@font/roboto"
+            android:textStyle="bold"
+            android:paddingHorizontal="24dp"
+            android:text="Add Macros"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
 
-        </RelativeLayout>
-    </HorizontalScrollView>
+        <!-- Calendar View -->
+        <CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/card_background"
+            android:dateTextAppearance="@style/CalendarDateText"
+            android:weekDayTextAppearance="@style/CalendarWeekDayText" />
 
-    <Button
-        android:id="@+id/AddMacro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/SearchBar"
-        android:text="Add Macros" />
-    <Button
-        android:id="@+id/ResetCalorie"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/SearchBar"
-        android:text="Reset Calories" />
+        <!-- Macros List -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/macros_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/card_background"
+            android:padding="8dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/macros_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_below="@id/calories_remaining_text" />
-
-
-
-</LinearLayout>
-
+    </LinearLayout>
 </ScrollView>
