--- a/app/src/main/res/layout/item_macro.xml
+++ b/app/src/main/res/layout/item_macro.xml
@@ -13,7 +13,16 @@
         android:orientation="vertical"
         android:padding="16dp"
         android:background="@color/SearchBar">
-
+        <TextView
+            android:id="@+id/date_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sunday"
+            android:textColor="#FFC107"
+            android:fontFamily="@font/roboto"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:paddingBottom="4dp"/>
         <TextView
             android:id="@+id/protein_text"
             android:layout_width="wrap_content"
@@ -53,6 +62,16 @@
             android:fontFamily="@font/roboto"
             android:textColor="@color/white"
             android:layout_marginBottom="8dp" />
+        <Button
+            android:id="@+id/delete_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete"
+            android:fontFamily="@font/roboto"
+            android:textStyle="bold"
+            android:background="@color/black"
+            android:textColor="@color/white"
+            android:layout_gravity="end"/>
 
 
     </LinearLayout>
