--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,8 @@
     <color name="red1">#FF0000</color>
     <color name="Dashboardbackground">#37418A</color>
     <color name="SearchBar">#151C4A</color>
+    <color name="proteinColor">#FF7F53</color>
+    <color name="carbColor">#00FCFF</color>
+    <color name="fatColor">#DC6FFF</color>
     <color name="NavigationBarbackground">@color/ic_launcher_background</color>
 </resources>
