--- a/app/src/main/res/layout/activity_step_tracker.xml
+++ b/app/src/main/res/layout/activity_step_tracker.xml
@@ -21,11 +21,12 @@
     <!-- ProgressBar in the center -->
     <ProgressBar
         android:id="@+id/circularProgressBar"
+        android:rotation="-90"
         style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:max="10000"
-        android:progress="0"
+        android:progress="5000"
         android:indeterminateOnly="false"
         android:progressDrawable="@drawable/circular_progress"
         app:layout_constraintTop_toTopOf="parent"
