--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -63,6 +63,19 @@
             android:textColor="#003554"
             android:textSize="28sp"
             android:textStyle="bold" />
+        <TextView
+            android:id="@+id/hello_user"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/roboto"
+            android:text="Hello User"
+            android:textColor="#003554"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:focusable="true" />
 
         <!-- Calorie Progress Section -->
         <HorizontalScrollView
