--- a/app/src/main/res/layout/dialog_add_macros.xml
+++ b/app/src/main/res/layout/dialog_add_macros.xml
@@ -3,41 +3,97 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/card_background">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Macros"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="#003554"
+        android:fontFamily="@font/roboto" />
 
     <EditText
         android:id="@+id/protein_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Protein (grams)"
-        android:inputType="numberDecimal" />
+        android:inputType="numberDecimal"
+        android:textColor="@color/black"
+        android:textColorHint="#888888"
+        android:fontFamily="@font/roboto"
+        android:textSize="16sp"
+        android:padding="8dp"
+        android:layout_marginTop="12dp"
+        android:background="@android:drawable/edit_text" />
 
     <EditText
         android:id="@+id/carbs_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Carbohydrates (grams)"
-        android:inputType="numberDecimal" />
+        android:hint="Carbs (grams)"
+        android:inputType="numberDecimal"
+        android:textColor="@color/black"
+        android:textColorHint="#888888"
+        android:fontFamily="@font/roboto"
+        android:textSize="16sp"
+        android:padding="8dp"
+        android:layout_marginTop="12dp"
+        android:background="@android:drawable/edit_text" />
+
+    <EditText
+        android:id="@+id/fiberInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Fiber (grams)"
+        android:inputType="numberDecimal"
+        android:textColor="@color/black"
+        android:textColorHint="#888888"
+        android:fontFamily="@font/roboto"
+        android:textSize="16sp"
+        android:padding="8dp"
+        android:layout_marginTop="12dp"
+        android:background="@android:drawable/edit_text" />
 
     <EditText
         android:id="@+id/fats_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Fats (grams)"
-        android:inputType="numberDecimal" />
+        android:inputType="numberDecimal"
+        android:textColor="@color/black"
+        android:textColorHint="#888888"
+        android:fontFamily="@font/roboto"
+        android:textSize="16sp"
+        android:padding="8dp"
+        android:layout_marginTop="12dp"
+        android:background="@android:drawable/edit_text" />
+
     <EditText
         android:id="@+id/serving_size_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Serving Size"
+        android:hint="Serving size"
         android:inputType="numberDecimal"
-        android:layout_marginTop="16dp"
-        android:padding="8dp" />
+        android:textColor="@color/black"
+        android:textColorHint="#888888"
+        android:fontFamily="@font/roboto"
+        android:textSize="16sp"
+        android:padding="8dp"
+        android:layout_marginTop="12dp"
+        android:background="@android:drawable/edit_text" />
 
     <Button
         android:id="@+id/btn_add_macros"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Macros" />
-
+        android:text="Add Macros"
+        android:textColor="#fff"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/roboto"
+        android:background="@drawable/button_background"
+        android:layout_marginTop="16dp" />
 </LinearLayout>
