--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -77,23 +77,20 @@
             android:clickable="true"
             android:focusable="true" />
 
-        <!-- Calorie Progress Section -->
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
+
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+
                 android:background="@drawable/card_background"
                 android:orientation="vertical"
                 android:padding="16dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="360dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <TextView
@@ -159,7 +156,7 @@
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/roboto"
                         android:textStyle="bold"
-                        android:text="Base Calorie Goal"
+                        android:text="Goal"
                         android:textColor="#003554"
                         android:textSize="16sp"
                         app:layout_constraintStart_toEndOf="@id/progress_calories"
@@ -187,7 +184,7 @@
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/roboto"
                         android:textStyle="bold"
-                        android:text="Consumed Calories"
+                        android:text="Food"
                         android:textColor="#003554"
                         android:textSize="16sp"
                         app:layout_constraintStart_toEndOf="@id/progress_calories"
@@ -226,7 +223,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto"
                             android:textStyle="bold"
-                            android:text="Burned Calories"
+                            android:text="Exercise"
                             android:textColor="#003554"
                             android:textSize="16sp" />
 
@@ -243,7 +240,7 @@
                     </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </LinearLayout>
-        </HorizontalScrollView>
+
         <LinearLayout
             android:id="@+id/water_section"
             android:layout_width="match_parent"
